# tree-sitter-dotenv

./: Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  simple-test  test-file
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  interpolated-strings.txt  simple-valued-variables.txt
